1.18.2 staging (#140)
* updated gradle, loom, fabric, and other deps to 1.18.2 versions

* started porting code to 1.18

* ported more code to 1.18

* bunch more work on configured and placed features

also fixed structure addition code, they have been moved to tags

* got almost all remaining deps working except vistas

* got all compile errors not related to features or surface builders or decorators

* replaced all fixed(128) with getTop for compat with amplified nether

* fixed a couple more placed features

* fixed large and small ancient debris features by using vanilla ones as reference

* fixed a few more by looking at vanilla

* fixed all compile errors with features I think

* fixed remaining compile errors

* optimized imports

* fixed runtime crash

* woops forgot to reference PlacementModifierTypes in  new PlacementModifiers

* changed noise value points to hypercubes instead, and update fabric.mod.json

* Update CinderscapesFeatures.java

Co-authored-by: haykam821 <24855774+haykam821@users.noreply.github.com>

* made PlacementModifierTypes final

* updated PlacementModifierTypes

* removed unnecessary tag additions

* changed back to includeMod for deps still not using it

* added needed mixins for MaterialRules

* fixed luminous grove MaterialRule

* tried getting ashy shoals material rule done, possibly fixed some issues with luminous grove material rule

* fixed bedorck issue with surface rules and fixed luninous grove surface rule

* increased density of luminous grove trees

* trying to fix ashy shoals biome placement and surface rule

* possibly fixed ashy shoals and blackstone shales spawn rate and size

* fixed ash layer spawning

* registered surface rule condition

* trying to mixin into SurfaceBuilder

* got ashy shoals magma placement working

* Uncommented line of code

* fixed magma blocks surface rules completly

* updated mixins java version to 17

* Get Crystiniu